--- a/profile_re/templates/profile_re/user.html
+++ b/profile_re/templates/profile_re/user.html
@@ -6,13 +6,15 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-8">
-            <h1 class="single__name">{{ user.get_full_name }}</h1>
-            <p>{{ user.profile.position }}</p>
-            <img class="avatar" src="{% if user.image %}{{ user.image.url }}{% else %}http://www.geeksinc.net/wp-content/uploads/2016/05/home-user-icon-1.png{% endif %}">
+        <div class="col-md-3">
+            <img class="avatar" src="{% if user.profile.avatar %}{{ user.profile.avatar.url }}{% else %}http://www.geeksinc.net/wp-content/uploads/2016/05/home-user-icon-1.png{% endif %}">
         </div>
-        <div class="col-md-4" style="text-align: right;">
-            <img src="{% static 'theme_first/img/logo.png' %}">
+        <div class="col-md-6">
+            <h1 class="single__name">{{ user.get_full_name }}</h1>
+            <h4 class="green text-uppercase">{{ user.profile.position }}</h4>
+        </div>
+        <div class="col-md-3">
+            <img class="logo" src="{% static 'theme_first/img/logo.png' %}">
             <div class="company__info">
                 <div class="company__item">
                     <p><img src="{% static 'theme_first/img/smartphone.png' %}"> +38 (063) 010-17-97</p>
@@ -30,7 +32,7 @@
 
     <div class="row">
         <div class="col-md-5">
-            <h3>skills</h3>
+            <h3 class="green text-uppercase">skills</h3>
             <table>
                 {% for skill in user.profile.skilllevel_set.all %}
                 <tr>
@@ -40,7 +42,7 @@
                 {% endfor %}
             </table>
 
-            <h3>LANGUAGES</h3>
+            <h3 class="green text-uppercase">LANGUAGES</h3>
             <table>
                 {% for lang in user.profile.userlanguagelevel_set.all %}
                 <tr>
@@ -50,7 +52,7 @@
             </table>
 
 
-            <h3>hobbies</h3>
+            <h3 class="green text-uppercase">hobbies</h3>
             <table>
                 <p>
                     {% for hobie in user.profile.hobieuser_set.all %}
@@ -59,27 +61,31 @@
                 </p>
             </table>
         </div>
+
+
+
         <div class="col-md-7">
             <div class="center__info">
-                <h2>Education</h2>
+                <h3 class="green text-uppercase">Education</h3>
                 <hr>
                 <p>{{ user.profile.education | safe }}</p>
             </div>
             <div class="center__info">
-                <h2>About</h2>
+                <h3 class="green text-uppercase">About</h3>
                 <hr>
                 <p>{{ user.profile.about | safe }}</p>
             </div>
             <div class="center__info">
-                <h2>work Experience</h2>
+                <h3 class="green text-uppercase">work Experience</h3>
                 <hr>
                 {% for comp in user.profile.company_set.all %}
                 <div class="company_set">
-                    {{ comp.title }}
-                    <hr>
+                    <p >{{ comp.title }}</p>
+                    <p class="dates">{{ comp.date_start }} - {% if comp.date_finish %}{{ comp.date_finish }}{% else %}present{% endif %}</p>
+                    <p>{{ comp.position }}</p>
                     {% for proj in comp.project_set.all %}
                     <div class="projects_set">
-                        <h4>{{ proj.title }}</h4>
+                        <h4 class="green text-uppercase">{{ proj.title }}</h4>
                         <div>{{ proj.description }}</div>
                     </div>
                     {% endfor %}
@@ -94,12 +100,25 @@
 
 
 <style>
-    .avatar {
-        border-radius: 50%;
-        width: 200px;
-        height: 200px;
-        border: 1px solid #dee;
-    }
+.green {
+    color: #00f4c7;
+}
+.avatar {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    border: 1px solid #dee;
+    margin-top: 24px;
+}
+.logo {
+    width: 160px;
+    margin-top: 24px;
+    margin-bottom: 24px;
+}
+.company__item img {
+    width: 20px;
+    height: auto;
+}
 </style>
 
 
