--- a/profile_re/templates/profile_re/user.html
+++ b/profile_re/templates/profile_re/user.html
@@ -31,9 +31,9 @@
 
 
     <div class="row">
-        <div class="col-md-5">
-            <h3 class="green text-uppercase">skills</h3>
-            <table>
+        <div class="col-md-3">
+            <h3 class="green text-uppercase left-title">skills</h3>
+            <table class="table">
                 {% for skill in user.profile.skilllevel_set.all %}
                 <tr>
                     <td>{{ skill.skill }}</td>
@@ -42,8 +42,8 @@
                 {% endfor %}
             </table>
 
-            <h3 class="green text-uppercase">LANGUAGES</h3>
-            <table>
+            <h3 class="green text-uppercase left-title">LANGUAGES</h3>
+            <table class="table">
                 {% for lang in user.profile.userlanguagelevel_set.all %}
                 <tr>
                     <td>{{ lang.language }} - {{ lang.level }}</td>
@@ -52,7 +52,7 @@
             </table>
 
 
-            <h3 class="green text-uppercase">hobbies</h3>
+            <h3 class="green text-uppercase left-title">hobbies</h3>
             <table>
                 <p>
                     {% for hobie in user.profile.hobieuser_set.all %}
@@ -64,7 +64,7 @@
 
 
 
-        <div class="col-md-7">
+        <div class="col-md-9">
             <div class="center__info">
                 <h3 class="green text-uppercase">Education</h3>
                 <hr>
@@ -80,9 +80,9 @@
                 <hr>
                 {% for comp in user.profile.company_set.all %}
                 <div class="company_set">
-                    <p >{{ comp.title }}</p>
+                    <p style="font-size: 1.2em;"><strong>{{ comp.title }}</strong></p>
                     <p class="dates">{{ comp.date_start }} - {% if comp.date_finish %}{{ comp.date_finish }}{% else %}present{% endif %}</p>
-                    <p>{{ comp.position }}</p>
+                    <p><strong>{{ comp.position }}</strong></p>
                     {% for proj in comp.project_set.all %}
                     <div class="projects_set">
                         <h4 class="green text-uppercase">{{ proj.title }}</h4>
@@ -132,6 +132,12 @@
 .company__item img {
     width: 20px;
     height: auto;
+}
+.left-title {
+    margin-bottom: 30px;
+}
+.center__info h3 {
+    margin-bottom: 30px;
 }
 </style>
 
