--- a/templates/theme_first/base.html
+++ b/templates/theme_first/base.html
@@ -13,6 +13,59 @@
 
 {% block content %}{% endblock content %}
 
+<style>
+.single__name {
+    margin-top: 70px;
+}
+.fa {
+    color: #e2e2e2;
+    margin-left: 3px;
+    font-size: .8em;
+}
+.fa.checked {
+    color: #00f4c7;
+}
+.header {
+    margin-bottom: 20px;
+}
+.green {
+    color: #00f4c7;
+}
+.avatar {
+    border-radius: 50%;
+    width: 170px;
+    height: 170px;
+    border: 1px solid #dee;
+    margin-top: 24px;
+}
+.icons-header {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: relative;
+    top: 7px;
+    margin-right: 10px;
+}
+.logo {
+    width: 160px;
+    margin-top: 24px;
+    margin-bottom: 24px;
+}
+.company__item img {
+    width: 20px;
+    height: auto;
+}
+.left-title {
+    margin-bottom: 30px;
+}
+.center__info h3 {
+    margin-bottom: 30px;
+}
+</style>
+
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
