--- a/pm/templates/pm/project.html
+++ b/pm/templates/pm/project.html
@@ -1,4 +1,5 @@
 {% extends 'theme_first/base.html' %}
+{% load i18n %}
 
 {% block title %}{{ project.title }}{% endblock title %}
 
@@ -20,25 +21,25 @@
                         {% for milestone in project.milestone_set.all %}
                             <tr>
                                 <td colspan="4" style="background: #e0e0e0;">
-                                    <strong>Майлстоун #{{ milestone.title }}</strong>
+                                    <strong>{% trans 'Milestone' %} #{{ milestone.title }}</strong>
                                     <span class="pull-right">{{ milestone.date_start }} - {{ milestone.date_finish }}</span>
                                 </td>
                             </tr>
                             {% for module in milestone.module_set.all %}
                                 <tr style="background: #f1f1f1;">
-                                    <td colspan="3"><span href="{% url 'module-desc' module.id %}" class="ajax-popup-link" style="cursor: pointer;">Модуль - {{ module.title }}</span></td>
+                                    <td colspan="3"><span href="{% url 'module-desc' module.id %}" class="ajax-popup-link" style="cursor: pointer;">{% trans 'Module' %} - {{ module.title }}</span></td>
                                     <td class="text-center"><strong>${{ module.rate_per_hour }}/ч</strong></td>
                                 </tr>
                                 {% for task in module.task_set.all %}
                                     <tr>
                                         <td></td>
                                         <td><span href="{% url 'task-desc' task.id %}" class="ajax-popup-link" style="cursor: pointer;">{{ task.title }}</span></td>
-                                        <td class="text-center">{{ task.time }} ч</td>
+                                        <td class="text-center">{{ task.time }} {% trans 'h' %}</td>
                                         <td class="text-center">${{ task.get_total_for_task }}</td>
                                     </tr>
                                 {% endfor %}
                                 <tr style="font-weight: bold;">
-                                    <td colspan="2">Итого по модулю</td>
+                                    <td colspan="2">{% trans 'Module in total' %}</td>
                                     <td class="text-center">{{ module.get_total_time }} ч</td>
                                     <td class="text-center">${{ module.get_total_amount }}</td>
                                 </tr>
@@ -50,7 +51,7 @@
                     </tbody>
                     <tfoot>
                         <tr style="background: #f6f6f6;">
-                            <th colspan="2">Итого по проекту {{ project.title }}</th>
+                            <th colspan="2">{% blocktrans with proj=project.title %}Project {{ proj }} in total{% endblocktrans %}</th>
                             <th class="text-center">{{ project.get_total_time }} ч</th>
                             <th class="text-center">${{ project.get_total_amount }}</th>
                         </tr>
