--- a/templates/theme_first/base.html
+++ b/templates/theme_first/base.html
@@ -1,5 +1,5 @@
 {% load static %}
-
+{% load i18n %}
 
 <!doctype html>
 <html lang="en">
@@ -13,6 +13,33 @@
     <title>{% block title %}{% endblock title %}</title>
 </head>
 <body>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-3 col-md-offset-9">
+            <form action="{% url 'set_language' %}" method="post" role="form" class="form">
+                {% csrf_token %}
+                <input name="next" type="hidden" value="{{ redirect_to }}" />
+                <div class="input-group">
+                    <select name="language" class="form-control">
+                        {% get_current_language as LANGUAGE_CODE %}
+                        {% get_available_languages as LANGUAGES %}
+                        {% get_language_info_list for LANGUAGES as languages %}
+                        {% for language in languages %}
+                            <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected="selected"{% endif %}>
+                                {{ language.name_local }} ({{ language.code }})
+                            </option>
+                        {% endfor %}
+                    </select>
+                    <span class="input-group-btn">
+                        <button class="btn btn-success" type="submit">{% trans 'Go' %}</button>
+                    </span>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
 
 {% block content %}{% endblock content %}
 
